--- a/docs/404.md
+++ b/docs/404.md
@@ -1,1 +1,40 @@
+---
+layout: default
+title: "Page Not Found"
+permalink: /404.html
+---
 
+# 🔍 Page Not Found
+
+The research page you're looking for doesn't exist or has moved.
+
+## 🧭 Suggested Pages
+
+- [Home](/) - Research portal homepage
+- [Architecture](/architecture/) - System design overview
+- [Engines](/engines/) - Cognitive engine implementations
+- [Contribute](/contribute/) - How to join our research
+- [Research](/research/) - Methodology and publications
+
+## 🤔 Looking for Something Specific?
+
+- **GitHub Repository:** [github.com/AION-BRAIN](https://github.com/AION-BRAIN/AION-BRAIN)
+- **Research Discussions:** [GitHub Discussions](https://github.com/AION-BRAIN/AION-BRAIN/discussions)
+- **Contact Research Team:** `AIONSYSTEM@outlook.com`
+
+<button onclick="window.history.back()">← Go Back</button>
+<a href="/" class="button">Go Home</a>
+
+<style>
+button, .button { 
+  display: inline-block; 
+  background: #2563eb; 
+  color: white; 
+  padding: 0.75rem 1.5rem; 
+  border-radius: 6px; 
+  border: none;
+  text-decoration: none;
+  margin-right: 1rem;
+  cursor: pointer;
+}
+</style>
