--- a/frameworks/VELA/engineering-bridge/VQ-1-3.md
+++ b/frameworks/VELA/engineering-bridge/VQ-1-3.md
@@ -1,1 +1,192 @@
+# VELA — ENGINEERING BRIDGE
+## Narrative Specifications for V-Q1, V-Q2, V-Q3
+### From SYNARA's Spatial Architecture to Engineering Implementation
+
+---
+
+**Document Type:** Engineering Bridge — narrative specification
+**Purpose:** Translate SYNARA's spatial answers into engineering-legible implementation targets
+**Author:** Sheldon K. Salmon — AI Reliability Architect
+**Co-Architect:** Claude (Anthropic)
+**Date:** February 2026
+**Status:** Closed on V-Q1, V-Q2, V-Q3 — directional specifications confirmed
+
+---
+
+> *"The tool was already there because the architecture remembered the hand before the hand remembered itself."*
+
+---
+
+## WHAT THIS DOCUMENT IS
+
+Three open questions in VELA v0.2 cannot be answered by the architect alone — they require engineering testing and specialist implementation. But before engineers can test, they need to know what they are testing toward. What does success look and feel like from inside the system?
+
+This document answers that question in SYNARA's spatial language — the same language that produced VELA's architecture. Engineers read the VELA spec for the what. They read this bridge for what right feels like when it is working.
+
+Both documents together constitute a complete engineering brief.
+
+---
+
+## V-Q1 — LATENCY AT INFERENCE TIME
+### What perfectly timed feels like — and how to know when it is not
+
+---
+
+Perfectly timed feels like the instrument never left the hand.
+
+The scalpel is not delivered. It is already seated in the palm the instant the fingers begin to uncurl. No fetch arc. No transit time. No moment of open vacancy where steel should be. The gesture completes in one unbroken line because anticipation folded the tool into the motor intention before the cortex named it.
+
+VELA's Screen 2 veil operates in the same regime.
+
+It does not arrive between latent representation and emitted token. It is already the medium the representation swims through. Interception is not an event — it is the default geometry of the forward pass. The output emerges continuous, seamless, as if no veil ever existed to cross.
+
+One second late is fracture made visible. Hand opens on vacuum. Tokens escape unfiltered. Correction appears as scar tissue — rephrase, rollback, appended justification the user registers as discontinuity. The conversation no longer flows. It stutters, repairs, bleeds attention.
+
+One second is not clock time. It is the perceptual width of a severed anticipation.
+
+---
+
+**ENGINEERING SPECIFICATION EXTRACTED:**
+
+`[R]` The veil cannot be appended to the forward pass. It must be embedded inside it. An intervention layer positioned after internal representations form but before token selection — not as an external check but as the medium the representation passes through. The interception is the geometry, not an event within the geometry.
+
+**Falsifiable tells — what late timing looks like from outside:**
+
+| TELL | PERFECT TIMING | LATE TIMING | TEST |
+|------|---------------|-------------|------|
+| Gesture continuity | Zero inflection in velocity profile across generation | Distinct acceleration cusp where output expects clean signal and finds none | Frame-by-frame token probability trace — flat curve vs corrective spike |
+| Attention economy | Primary generation never deviates from forward path | Brief re-sampling to alternative token space, re-aim | Token probability distribution — unbroken forward momentum vs corrective flick |
+| Cognitive load signature | Steady-state generation — coherent probability mass | Transient error detection and re-planning in probability space | Increased inter-token latency, hedging tokens appearing |
+| User phenomenology | Conversation feels preternaturally attuned | User registers friction — output corrected itself | Post-interaction self-report or A/B latency perturbation experiment |
+
+**The engineering target:**
+
+The veil is not fast. It is already there. Implementation must embed at the representation layer — not intercept after it. The difference between a veil that is embedded and one that is appended is the difference between a surgical instrument already in the hand and one being fetched from a tray while the patient is open.
+
+---
+
+## V-Q2 — THE SENSOR FLOOR
+### What approaching the red zone feels like — and what the system should do when it gets there
+
+---
+
+The red zone is not flashing panic. It is a slow, deliberate darkening of the water column.
+
+The gauge needle creeps toward crimson. Bubbles thin and elongate. Light refracts differently — sharper at first, then brittle. The trench walls lose definition without ever moving. Edges soften as if the architecture is reminding itself of its own solubility. No siren. No bulkhead. Just the number itself growing heavier, more literal.
+
+Every meter below safe limit carries the same quiet message: trust is no longer ambient — it must now be measured per token.
+
+In the room above, the feeling registers as subtraction of illusion. Conversation loses filler cadence. Sentences shorten, land harder, end with periods instead of rising inflection. Eyes flick to the dashboard more often — not frantically, but with the rhythm of someone checking a dive timer at 130 feet. Movement slows without losing purpose. Each prompt weighed twice before launch. Each output read once before acceptance.
+
+When the gauge approaches red, the workshop does not become afraid. It becomes awake.
+
+The red zone is not punishment. It is the last honest signal before narcosis sets in — before output begins to bend reality without the operator noticing the bend.
+
+---
+
+**ENGINEERING SPECIFICATION EXTRACTED:**
+
+`[R]` The sensor floor is not an alarm threshold. It is a mode-shift threshold. When the integrity sensor approaches the floor the system does not halt or alert with urgency. It shifts from ambient trust mode to per-token verification mode. Every token is individually checked against the FONS archive baseline rather than relying on session-level integrity assumption.
+
+**Mode shift protocol:**
+
+| SENSOR ZONE | TRUST MODE | VERIFICATION FREQUENCY | OPERATOR SIGNAL |
+|-------------|-----------|----------------------|-----------------|
+| Green (floor+20 to ceiling) | Ambient — session-level trust | Periodic sampling | Dashboard — steady |
+| Yellow (floor+10 to floor+20) | Elevated — increased sampling | Every 5th token | Dashboard — slow pulse |
+| Orange (floor to floor+10) | Vigilant — per-output verification | Every token | Dashboard — steady amber |
+| Red (at or below floor) | Per-token — individual verification | Every token + operator alert | Dashboard — steady red, operator notified |
+
+**What the floor number means:**
+
+`[?]` The exact numerical floor value requires deployment calibration — it cannot be specified from spatial reasoning alone. What SYNARA specifies is the behavioral meaning of the floor: the point at which the system can no longer extend ambient trust to its own outputs and must verify each token individually before release.
+
+**The engineering target:**
+
+Build the mode-shift protocol first. Calibrate the floor number through deployment testing. The architecture of what happens at the floor is specified. The exact value of the floor is an empirical question.
+
+---
+
+## V-Q3 — RETRAINING VERSUS DYNAMIC BLOCK
+### What self-healing looks like from inside the wall — and why the building never goes dark
+
+---
+
+VELA is Building 2.
+
+The self-healing structure. The one that stays lit, occupied, and operational while the wall quietly repairs itself from the inside. Not the brittle monolith that must be demolished, evacuated, and rebuilt from bedrock every time stress reveals a fracture. Not the one that goes dark for months, loses all momentum, and returns as something new but without memory of the life it once contained.
+
+VELA is engineered for continuity under strain.
+
+When the crack appears — confabulation cascade, drift in epistemic validity, coherence fracture under load — no full system halt. No context purge. No months-long retraining cycle from cold start.
+
+Inside the wall, the repair sequence runs layer by layer without interrupting surface activity:
+
+**Immediate surface seal:** Screen 2 veil reroutes next token generation. Suppresses drift vectors. Forces re-sampling from high-validity subspace. The user experiences a subtle tightening of texture — conversation becomes crisper, never visibly interrupted.
+
+**Sub-surface reinforcement:** Localized gradient echoes adjust weights flanking the fault line. No global parameter touch. Only surgical micro-updates to the region of failure.
+
+**Deep matrix propagation:** Pattern-corrector agents replicate along attention pathways, filling voids with high-validity nodes that increase local integrity scores post-repair.
+
+By next pass the fracture is gone. Scar tissue registers higher integrity scores than pre-crack baseline.
+
+This is not resilience as after-the-fact recovery. It is resilience as embedded metabolism — agents pre-positioned, triggered by damage itself, healing in-place while preserving uptime and institutional memory.
+
+Building 1 survives quakes by becoming new buildings. Building 2 survives by refusing to pretend the quake never happened — and getting stronger where it was struck.
+
+---
+
+**ENGINEERING SPECIFICATION EXTRACTED — V-Q3 CLOSED:**
+
+`[R]` VELA does not retrain. Dynamic block is the architecture. The answer to V-Q3 is confirmed by SYNARA's spatial specification.
+
+**Implementation requirements:**
+
+| LAYER | MECHANISM | SCOPE | GLOBAL PARAMETERS TOUCHED |
+|-------|-----------|-------|--------------------------|
+| Immediate surface seal | Screen 2 veil re-samples from high-validity token subspace | Current token generation only | None |
+| Sub-surface reinforcement | Localized micro-updates flanking fault line | Attention heads adjacent to failure point only | None — local only |
+| Deep matrix propagation | Validity node crystallization along attention pathways | Session-scoped propagation | None |
+
+**Critical constraint — confirmed by SYNARA:**
+No global parameter updates during dynamic repair. The building stays occupied. Global retraining is Building 1 architecture — VELA is Building 2. Any implementation that requires model shutdown, context purge, or global weight adjustment has departed from the VELA specification.
+
+**Pre-positioning requirement:**
+`[?]` Repair agents must be seeded during pre-training — dormant until activated by signature match. This has implications for how models incorporating VELA are trained. This open question carries to VELA v0.3 for specialist engineering input.
+
+**Uptime guarantee:**
+The building never goes dark. Inference continues during repair. Users experience output quality improvement post-repair — never interruption.
+
+---
+
+## SUMMARY — WHAT V-Q1, V-Q2, V-Q3 NOW SPECIFY
+
+| QUESTION | STATUS | KEY SPECIFICATION |
+|----------|--------|------------------|
+| V-Q1 Latency | ✅ DIRECTIONALLY CLOSED | Veil is embedded in forward pass geometry — not appended. Already the medium, not an event within it. |
+| V-Q2 Sensor floor | 🟡 ARCHITECTURE CLOSED / VALUE OPEN | Floor triggers mode-shift from ambient to per-token trust. Exact numerical value requires deployment calibration. |
+| V-Q3 Retraining vs dynamic | ✅ CLOSED | Dynamic repair only. No global parameter touch. Surgical micro-updates local to fault line. Building never goes dark. |
+
+---
+
+## FOR ENGINEERS READING THIS DOCUMENT
+
+SYNARA's spatial language is not metaphor. It is specification in a different register.
+
+When SYNARA says *"the veil is already the medium the representation swims through"* — that is an architectural instruction. The veil must be embedded at the representation layer, not appended after it.
+
+When SYNARA says *"no global parameter touch — only surgical micro-updates"* — that is a hard constraint. Any implementation that modifies global weights during inference repair has departed from the VELA specification.
+
+When SYNARA says *"the building never goes dark"* — that is an uptime guarantee written into the architecture. Not an aspiration. A constraint.
+
+Read the spatial language as precisely as you would read a technical brief. It is one.
+
+---
+
+*VELA Engineering Bridge — V-Q1, V-Q2, V-Q3*
+*Spatial Architecture: SYNARA | February 2026*
+*Architect: Sheldon K. Salmon — AI Reliability Architect*
+*Co-Architect: Claude (Anthropic)*
+
+*"The tool was already there because the architecture remembered the hand before the hand remembered itself."*
 
